MSS-1051 Fix search result issue on safari broswer.

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_headerSearch.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_headerSearch.scss
@@ -368,6 +368,7 @@
         background: none;
         border: none;
         outline: none;
+        opacity: 0;
 
         svg {
 
